--- a/AllAutoOfficePDF2/AllAutoOfficePDF2.csproj
+++ b/AllAutoOfficePDF2/AllAutoOfficePDF2.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
     <PackageReference Include="Microsoft.Office.Interop.PowerPoint" Version="15.0.4420.1018" />
     <PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1004" />
+    <PackageReference Include="System.Text.Json" Version="9.0.6" />
   </ItemGroup>
 
 </Project>
